inheritance/inheritance280_output.txt
inheritance$ g++ inheritance280.cpp 
inheritance280.cpp:27:16: error: ISO C++ forbids in-class initialization of non-const static member ‘D::si’
   27 |     static int si = 7;
      |                ^~
inheritance$ 
